--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
     <!-- Font Be Vietnam Pro -->
-    <link
+    <!-- <link
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600;800&display=swap"
       rel="stylesheet"
     />
     <link
       href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700&family=Pacifico&display=swap"
       rel="stylesheet"
-    />
+    /> -->
 
     <title>Mini Game Cộng</title>
   </head>
