--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
-    <!-- Font Be Vietnam Pro -->
-    <!-- <link
-      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;600;800&display=swap"
-      rel="stylesheet"
+    <title>Việt Nam trong Cộng là...</title>
+    <meta property="og:title" content="Việt Nam trong Cộng là..." />
+    <meta
+      property="og:description"
+      content="Game mini của Công Cafe các bạn tham gia sẽ được nhận thưởng"
     />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@700&family=Pacifico&display=swap"
-      rel="stylesheet"
-    /> -->
-
-    <title>Mini Game Cộng</title>
+    <meta property="og:image" content="/static/miniGame.png" />
+    <meta property="og:url" content="/static/miniGame.png" />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
