--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       property="og:description"
       content="Game mini của Công Cafe các bạn tham gia sẽ được nhận thưởng"
     />
-    <meta property="og:image" content="/static/miniGame.png" />
-    <meta property="og:url" content="/static/miniGame.png" />
+    <meta property="og:image" content="https://ibb.co/nt3NbpS" />
+    <meta property="og:url" content="https://ibb.co/nt3NbpS" />
     <meta property="og:type" content="website" />
   </head>
   <body>
