--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.jpg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
     <title>Việt Nam trong Cộng là...</title>
     <meta property="og:title" content="Việt Nam trong Cộng là..." />
-    <meta
-      property="og:description"
-      content="Game mini của Công Cafe các bạn tham gia sẽ được nhận thưởng"
-    />
-    <meta property="og:image" content="https://ibb.co/nt3NbpS" />
-    <meta property="og:url" content="https://ibb.co/nt3NbpS" />
+    <meta property="og:description" content="Việt Nam trong Cộng là..." />
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:url" content="/logo.png" />
     <meta property="og:type" content="website" />
   </head>
   <body>
