--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/logo.png" />
+    <link rel="icon" type="image/svg+xml" href="/static/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet" />
     <title>Việt Nam trong Cộng là...</title>
     <meta property="og:title" content="Việt Nam trong Cộng là..." />
     <meta property="og:description" content="Việt Nam trong Cộng là..." />
-    <meta property="og:image" content="/logo.png" />
-    <meta property="og:url" content="/logo.png" />
+    <meta property="og:image" content="/static/logo.png" />
+    <meta property="og:url" content="/static/logo.png" />
     <meta property="og:type" content="website" />
   </head>
   <body>
