update quảng cáo

--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <meta property="og:image" content="/static/logo.png" />
     <meta property="og:url" content="/static/logo.png" />
     <meta property="og:type" content="website" />
+    <meta name="google-adsense-account" content="ca-pub-4705512319393842" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4705512319393842"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
