--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/static/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <link href="/src/styles.css" rel="stylesheet" />
     <title>Việt Nam trong Cộng là...</title>
     <meta property="og:title" content="Việt Nam trong Cộng là..." />
@@ -12,11 +15,6 @@
     <meta property="og:url" content="/static/logo.png" />
     <meta property="og:type" content="website" />
     <meta name="google-adsense-account" content="ca-pub-4705512319393842" />
-    <script
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4705512319393842"
-      crossorigin="anonymous"
-    ></script>
   </head>
   <body>
     <div id="root"></div>
